--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
     />
   </head>
   <body>
+  <div class="">
     <h1>Promo Tracker</h1>
+    <h2>Current Promo</h2>
+    <h3>Buy More Save More</h3>
+  </div> 
+  <table class="promos">
+    <tr><td>Spend $150 save $30</td><td>cc: 62397</td></tr>
+    <tr><td>Spend $250 save $60</td><td>cc: 62399</td></tr>
+    <tr><td>Spend $350 save $90</td><td>cc: 62404</td></tr>
+  </table>
 
+
+ 
+    
    
     <form action="" id="form">
       <input type="text" id="input" class="input" placeholder="Enter Name and Promo" autocomplete="off">
