--- a/index.html
+++ b/index.html
@@ -7,34 +7,25 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Promo Tracker</title>
-    <link
-      rel="shortcut icon"
-      type="image/jpg"
-      href="/th.png"
-    />
+    <link rel="shortcut icon" type="image/jpg" href="/th.png" />
   </head>
   <body>
-  <div class="">
-    <h1>Promo Tracker</h1>
-    <h2>Current Promo</h2>
-    <h3>Buy More Save More</h3>
-  </div> 
-  <table class="promos">
-    <tr><td>Spend $150 save $30</td><td>cc: 62397</td></tr>
-    <tr><td>Spend $250 save $60</td><td>cc: 62399</td></tr>
-    <tr><td>Spend $350 save $90</td><td>cc: 62404</td></tr>
-  </table>
+    <div class="">
+      <h1>Promo Tracker</h1>
+      <h2>Current Promo</h2>
+      <h3>Spend $300 Get $75 Gift Card</h3>
+      <h3>Load $100 on a Print Pass Card Get A Bouns $20</h3>
+    </div>
 
-
- 
-    
-   
     <form action="" id="form">
-      <input type="text" id="input" class="input" placeholder="Enter Name and Promo" autocomplete="off">
-      <ul class="todos" id="todos">
-
-      </ul>
-
+      <input
+        type="text"
+        id="input"
+        class="input"
+        placeholder="Enter Name and Promo"
+        autocomplete="off"
+      />
+      <ul class="todos" id="todos"></ul>
     </form>
     <small>Right Click to Delete Promo</small>
 
