--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <div class="">
       <h1>Promo Tracker</h1>
       <h2>Current Promo</h2>
-      <h3>Spend $300 Get $75 Gift Card</h3>
-      <h3>Load $100 on a Print Pass Card Get A Bouns $20</h3>
+      <h3>Buy More Save More</h3>
+    </div> 
+    <table class="promos">
+      <tr><td>Spend $150 save $30</td><td>cc: 70839</td></tr>
+      <tr><td>Spend $250 save $60</td><td>cc: 70844</td></tr>
+      <tr><td>Spend $350 save $90</td><td>cc: 70853</td></tr>
+    </table>
     </div>
 
     <form action="" id="form">
